--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,9 @@
 }
 
 .App-body {
-  height: 40vmin;
+  height: 45vh;
   display: flex;
+  align-items: flex-end;
   justify-content: center;
 }
 
@@ -36,11 +37,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 240px;
-  padding: 10px;
+  width: 30vw;
+  padding: 2vw;
 }
 .hanoi-block {
-  height: 20px;
+  height: 2vh;
   margin: 2px;
   background-color: lightskyblue;
   border: solid;
@@ -49,10 +50,10 @@
 }
 .hanoi-bottom {
   height: 20px;
-  margin: 2px;
+  margin: 1vw;
   background-color: sandybrown;
   border-width: 1px;
-  width: 100%;
+  width: 31vw;
 }
 .hanoi-desc {
   font-size: xx-large;
